# projekt

./: CMakeLists.txt  README.md
operacja_na_plikach_c/: fgets.cpp  fprintf.cpp  fputc.cpp  fputs.cpp  fscanf.cpp  otczyt.cpp  zapis.cpp  zmiana.cpp
operacje_na_plikach_c++/: app.cpp  in.cpp  out.cpp
